force-app/main/default/objects/KPI__c/KPI__c.object-meta.xml
<CustomObject>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{00000000}</displayFormat>
        <label>KPI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>