force-app/main/default/objects/KPI__c/fields/Currency_Goal__c.field-meta.xml
<CustomField>
    <fullName>Currency_Goal__c</fullName>
    <label>Currency Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>