force-app/main/default/objects/KPI__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Deposits</fullName>
            </value>
            <value>
                <fullName>Commercial Loans</fullName>
            </value>
            <value>
                <fullName>Consumer Loans</fullName>
            </value>
            <value>
                <fullName>Mortgage Loans</fullName>
            </value>
            <value>
                <fullName>Core Income</fullName>
            </value>
            <value>
                <fullName>Leverage Ratio</fullName>
            </value>
            <value>
                <fullName>Efficiency Ratio</fullName>
            </value>
            <value>
                <fullName>Google Reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>