force-app/main/default/objects/KPI__c/fields/Number_Goal__c.field-meta.xml
<CustomField>
    <fullName>Number_Goal__c</fullName>
    <label>Number Goal</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>