force-app/main/default/objects/KPI__c/fields/Percent_Goal__c.field-meta.xml
<CustomField>
    <fullName>Percent_Goal__c</fullName>
    <label>Percent Goal</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>