force-app/main/default/objects/KPI__c/fields/Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Date</label>
    <type>Date</type>
</CustomField>